Another page update

--- a/homepage/input/links.html
+++ b/homepage/input/links.html
@@ -16,11 +16,11 @@
 	<ul>
         <li><a href="http://www.mag-heut.net">Enigma Web Forum</a>
         - A web-based discussion forum for everything related to Enigma</li>
-        <li><a href="http://blackballed.sourceforge.net/">BlackBallEd</a>
+        <li><a href="http://blackballed.sourceforge.net/">BlackBallEd (obsolete)</a>
         - An Enigma Level Editor</li>
-        <li><a href="http://www.capkoh.narod.ru/SL_MainPage.html">Star.LUA</a>
+        <li><a href="http://www.capkoh.narod.ru/SL_MainPage.html">Star.LUA (obsolete)</a>
         - Another Enigma Level Editor</li>
-        <li><a href="$$wiki$$">Level Wiki</a>
+        <li><a href="$$wiki$$">Level Wiki (defunct)</a>
         - A Wiki for levelauthors</li>
     </ul>
 
@@ -45,7 +45,7 @@
 
 <h3>Similar games</h3>
     <ul>
-        <li><a href="http://www.oxyd-game.com">Oxyd&reg; extra v2.0</a>
+        <li><a href="http://www.oxyd-game.com">Oxyd&reg; extra v2.0 (unavailable)</a>
         - The only official available Dongleware Oxyd version</li>
         <li><a href="http://www.happypenguin.org/show?OZONE">Ozone</a>
         - A game similar to Enigma but in three dimensions, with level-editor (link to &quot;The Linux Game Tome&quot;)</li>
