--- a/homepage/input/links_de.html
+++ b/homepage/input/links_de.html
@@ -16,11 +16,11 @@
 	<ul>
         <li><a href="http://www.mag-heut.net">Enigma Web Forum</a>
         - Eine Internet-Diskussionsplattform f&uuml;r alles, was mit Enigma zu tun hat</li>
-        <li><a href="http://blackballed.sourceforge.net/">BlackBallEd</a>
+        <li><a href="http://blackballed.sourceforge.net/">BlackBallEd (veraltet)</a>
         - Ein Leveleditor f&uuml;r Enigma</li>
-        <li><a href="http://www.capkoh.narod.ru/SL_MainPage.html">Star.LUA</a>
+        <li><a href="http://www.capkoh.narod.ru/SL_MainPage.html">Star.LUA (veraltet)</a>
         - Ein weiterer Leveleditor f&uuml;r Enigma</li>
-        <li><a href="$$wiki$$">Enigma Level Wiki</a>
+        <li><a href="$$wiki$$">Enigma Level Wiki (defekt)</a>
         - Ein Wiki f&uuml;r Levelautoren</li>
     </ul>
 
@@ -45,7 +45,7 @@
 
 <h3>&Auml;hnliche Spiele</h3>
     <ul>
-        <li><a href="http://www.oxyd-game.com">Oxyd&reg; extra v2.0</a>
+        <li><a href="http://www.oxyd-game.com">Oxyd&reg; extra v2.0 (unerreichbar)</a>
         - Die einzige offiziell erh&auml;ltliche Dongleware Oxyd Version</li>
         <li><a href="http://www.happypenguin.org/show?OZONE">Ozone</a>
         - Ein Spiel &auml;hnlich Oxyd aber in drei Dimensionen, mit Level-Editor (Link zu &quot;The Linux Game Tome&quot;)</li>
