--- a/homepage/input/links_ru.html
+++ b/homepage/input/links_ru.html
@@ -16,11 +16,11 @@
 	<ul>
         <li><a href="http://www.mag-heut.net">Веб-форум Enigma</a>
         - Веб-ориентированный форум обсуждения всего относящегося к Enigma</li>
-        <li><a href="http://blackballed.sourceforge.net/">BlackBallEd</a>
+        <li><a href="http://blackballed.sourceforge.net/">BlackBallEd (obsolete)</a>
         - Редактор уровней Enigma</li>
-        <li><a href="http://www.capkoh.narod.ru/SL_MainPage.html">Star.LUA</a>
+        <li><a href="http://www.capkoh.narod.ru/SL_MainPage.html">Star.LUA (obsolete)</a>
         - Другой редактор уровней Enigma</li>
-        <li><a href="$$wiki$$">Wiki об уровнях</a>
+        <li><a href="$$wiki$$">Wiki об уровнях (defunct)</a>
         - Wiki для создателей уровней</li>
     </ul>
 
@@ -45,7 +45,7 @@
 
 <h3>Похожие игры</h3>
     <ul>
-        <li><a href="http://www.oxyd-game.com">Oxyd&reg; extra v2.0</a>
+        <li><a href="http://www.oxyd-game.com">Oxyd&reg; extra v2.0 (unavailable)</a>
         - Только официально доступная версия Dongleware Oxyd</li>
         <li><a href="http://www.happypenguin.org/show?OZONE">Ozone</a>
         - Игра, похожая на Enigma, но в трёх измерениях, с редактором уровней
