--- a/homepage/input/screenshots_ru.html
+++ b/homepage/input/screenshots_ru.html
@@ -1,28 +1,28 @@
 <div class="screenshot">
 <h2>Скриншоты</h2>
 
-<!-- <h3 id="v1.20">Версия 1.20</h3> -->
+<h3 id="v1.20">Версия 1.20</h3>
 
-<!-- <a href="$$imagedir$$/screenshots/ral15_1.png"><img src="$$imagedir$$/screenshots/ral15_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/mecke22_2.png"><img src="$$imagedir$$/screenshots/mecke22_2_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/luc36_1.png"><img src="$$imagedir$$/screenshots/luc36_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/ais13_1.png"><img src="$$imagedir$$/screenshots/ais13_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/mecke04_3.png"><img src="$$imagedir$$/screenshots/mecke04_3_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/raoul32_1.png"><img src="$$imagedir$$/screenshots/raoul32_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/ral44_1.png"><img src="$$imagedir$$/screenshots/ral44_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/devnull32_1.png"><img src="$$imagedir$$/screenshots/devnull32_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/raoul34_1.png"><img src="$$imagedir$$/screenshots/raoul34_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/andreas49_1.png"><img src="$$imagedir$$/screenshots/andreas49_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/zephyr01_1.png"><img src="$$imagedir$$/screenshots/zephyr01_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/ral38_1.png"><img src="$$imagedir$$/screenshots/ral38_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/andreas51_1.png"><img src="$$imagedir$$/screenshots/andreas51_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/devnull49_1.png"><img src="$$imagedir$$/screenshots/devnull49_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/wesley02_1.png"><img src="$$imagedir$$/screenshots/wesley02_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/andreas47_1.png"><img src="$$imagedir$$/screenshots/andreas47_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/devnull09_1.png"><img src="$$imagedir$$/screenshots/devnull09_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/raoul39_1.png"><img src="$$imagedir$$/screenshots/raoul39_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/mecke32_1.png"><img src="$$imagedir$$/screenshots/mecke32_1_s.png" alt="Levelscreenshot"></a> -->
-<!-- <a href="$$imagedir$$/screenshots/ral36_1.png"><img src="$$imagedir$$/screenshots/ral36_1_s.png" alt="Levelscreenshot"></a> -->
+<a href="$$imagedir$$/screenshots/ral15_1.png"><img src="$$imagedir$$/screenshots/ral15_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/mecke22_2.png"><img src="$$imagedir$$/screenshots/mecke22_2_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/luc36_1.png"><img src="$$imagedir$$/screenshots/luc36_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/ais13_1.png"><img src="$$imagedir$$/screenshots/ais13_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/mecke04_3.png"><img src="$$imagedir$$/screenshots/mecke04_3_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/raoul32_1.png"><img src="$$imagedir$$/screenshots/raoul32_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/ral44_1.png"><img src="$$imagedir$$/screenshots/ral44_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/devnull32_1.png"><img src="$$imagedir$$/screenshots/devnull32_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/raoul34_1.png"><img src="$$imagedir$$/screenshots/raoul34_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/andreas49_1.png"><img src="$$imagedir$$/screenshots/andreas49_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/zephyr01_1.png"><img src="$$imagedir$$/screenshots/zephyr01_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/ral38_1.png"><img src="$$imagedir$$/screenshots/ral38_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/andreas51_1.png"><img src="$$imagedir$$/screenshots/andreas51_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/devnull49_1.png"><img src="$$imagedir$$/screenshots/devnull49_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/wesley02_1.png"><img src="$$imagedir$$/screenshots/wesley02_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/andreas47_1.png"><img src="$$imagedir$$/screenshots/andreas47_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/devnull09_1.png"><img src="$$imagedir$$/screenshots/devnull09_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/raoul39_1.png"><img src="$$imagedir$$/screenshots/raoul39_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/mecke32_1.png"><img src="$$imagedir$$/screenshots/mecke32_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/ral36_1.png"><img src="$$imagedir$$/screenshots/ral36_1_s.png" alt="Levelscreenshot"></a>
 
 <h3 id="v1.01">Версия 1.01</h3>
 <a href="$$imagedir$$/screenshots/andreas43_2.png"><img src="$$imagedir$$/screenshots/andreas43_2_s.png" alt="Скриншот уровня"></a>
