-> Link new clip to the homepage

--- a/homepage/input/movieclips_de.html
+++ b/homepage/input/movieclips_de.html
@@ -2,18 +2,18 @@
 
 <p>Dank unserer aktiven Spielergemeinschaft sind wir in der Lage, Ihnen eine
    schnell wachsende Anzahl an Video-Clips anzubieten. Wir hoffen, dass
-   Ihnen die Video-Clips einen Einblick geben in die vielseitigen 
+   Ihnen die Video-Clips einen Einblick geben in die vielseitigen
    M&ouml;glichkeiten, die Enigma bietet, und Ihnen zeigen, wie andere Spieler
    Level meistern, die auf den ersten Blick schier unl&ouml;sbar erscheinen.
    </p>
 
 <p>Auf dieser Seite bieten wir Ihnen Links zum Herunterladen der Video-Clips,
    die das Enigma Team selber produziert hat. Sie können sie herunterladen und
-   mit einem Flash Video unterstützenden Programm, wie MPlayer, Realplayer, 
+   mit einem Flash Video unterstützenden Programm, wie MPlayer, Realplayer,
    VLC media player, o.&auml;., abspielen.</p>
-   
+
 <p>Das Herunterladen gro&szlig;er Filme ist sinnvoll, da Sie sie wahrscheinlich
-   mehrfach abspielen werden. Aber Sie können sie, sowie viele weitere 
+   mehrfach abspielen werden. Aber Sie können sie, sowie viele weitere
    Video-Clips unserer Spieler, auch direkt auf dieser Internetseite in einem
    eingebetteten Abspielprogramm betrachten. Falls Ihr Browser die angegebenen
    Bedingungen erf&uuml;llt, dr&uuml;cken Sie einfach den folgenden Knopf.</p>
@@ -33,7 +33,7 @@
 
   <ul> <!-- keep space in first li entry - IE needs it -->
     <li><b>Trailer 1</b> - pr&auml;sentiert Enigma 1.01, <a href="$$trailer_1$$">downloaden</a> (etwa 23 MB)</li>
-    <li><b>Trailer 2</b> - pr&auml;sentiert Enigma 1.10, bald verf&uuml;gbar</li>
+    <li><b>Trailer 2</b> - pr&auml;sentiert Enigma 1.20, <a href="$$trailer_2$$">downloaden</a> (etwa 38 MB)</li>
   </ul>
 
 
@@ -41,7 +41,7 @@
   <a name="magicmoments">Magische Augenblicke von Enigma</a></h3>
   <p>Von Zeit zu Zeit erf&auml;hrt jeder, der Enigma spielt, magische Augenblicke.
      Gl&uuml;cklicherweise haben einige Spieler ihre Glanznummern eingefangen
-     und teilen sie nun mit uns. Wir haben die besten dieser magischen 
+     und teilen sie nun mit uns. Wir haben die besten dieser magischen
      Durchl&auml;ufe zu Ihrer Inspiration und Unterhaltung zusammengestellt.</p>
 
   <ul> <!-- keep space in first li entry - IE needs it -->
@@ -54,4 +54,3 @@
   <a name="userclips">Video-Clips von Enigma Spielern</a></h3>
   <p>Einige Spieler haben ihre Video-Clips nach YouTube hochgeladen. Um sie
      abzuspielen laden Sie das Abspielprogramm mittels des obigen Knopfes.</p>
-
