--- a/homepage/input/movieclips_ru.html
+++ b/homepage/input/movieclips_ru.html
@@ -10,7 +10,7 @@
     были подготовлены командой Enigma. Их можно скачать и просмотреть в
     любом видеоплеере, поддерживающем Flash Video, например, MPlayer,
     RealPlayer, медиаплеер VLC и т.п.</p>
-   
+
 <p>Если Вы собираетесь просматривать довольно большие видеофрагменты
     по несколько раз, то будет лучше скачать их. Но их, как и многие другие
     видеофргаменты пользователей, можно просмотреть непосредственно через
@@ -31,7 +31,7 @@
 
   <ul> <!-- keep space in first li entry - IE needs it -->
     <li><b>1й трейлер</b> - введение в Enigma 1.01, <a href="$$trailer_1$$">скачать</a> (прибл. 23 Мб)</li>
-    <li><b>2й трейлер</b> - введение в Enigma 1.10, выйдет уже скоро</li>
+    <li><b>2й трейлер</b> - введение в Enigma 1.20, <a href="$$trailer_2$$">скачать</a> (прибл. 38 Мб)</li>
   </ul>
 
 
@@ -52,7 +52,3 @@
   <a name="userclips">Видеофрагменты пользователей Enigma</a></h3>
   <p>Многие пользователи загрузили на YouTube свои собственные видеофрагменты. Чтобы просмотреть их, загрузите плеер,
   нажав на кнопку, расположенную чуть выше на этой странице.</p>
-
-
-
- 
