--- a/homepage/input/viewclips.html
+++ b/homepage/input/viewclips.html
@@ -8,8 +8,8 @@
 <p>On this page we offer download links to those clips the Enigma team
    produced itself. You can download them and review them with any Flash
    Video supporting player like MPlayer, Realplayer, VLC media player, etc.</p>
-   
-<p>Downloading of large movie clips is useful, as you will likely review 
+
+<p>Downloading of large movie clips is useful, as you will likely review
    them many times. But you can view them, as well as numerous additional user
    clips, directly in this embedded player:</p>
 
@@ -23,7 +23,7 @@
   <ul> <!-- keep space in first li entry - IE needs it -->
     <li><b>Trailer 1</b> - introducing Enigma 1.01, <a href="$$trailer_1$$">download</a> (appr. 23 MB)
     or <a href='javascript:loadVideoClip("WV9l26Y-mBk")'>view</a></li>
-    <li><b>Trailer 2</b> - introducing Enigma 1.10, comming soon</li>
+    <li><b>Trailer 2</b> - introducing Enigma 1.20, <a href="$$trailer_2$$">download</a> (appr. 38 MB)</li>
   </ul>
 
 
@@ -31,7 +31,7 @@
   <a name="magicmoments">Magic Moments of Enigma</a></h3>
   <p>From time to time everyone experiences magic moments while playing Enigma.
      Luckily some users captured their highlights and share them with us.
-     We composed the best of these magic runs for your inspiration and 
+     We composed the best of these magic runs for your inspiration and
      entertainment.</p>
 
   <ul> <!-- keep space in first li entry - IE needs it -->
@@ -44,61 +44,61 @@
 <h3><a class="arrowup" href="javascript:scrollHome()"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
   <a name="userclips">Clips of Enigma Users</a></h3>
   <p>Several users uploaded own clips to YouTube. Here is the list of known
-     Enigma related movies. In case of outdated level versions we added the 
+     Enigma related movies. In case of outdated level versions we added the
      score version info in braces. Easy mode runs are marked, too.</p>
 
   <ul> <!-- keep space in first li entry - IE needs it -->
-    <li><b>Enigma I#26 - Uhh-Steady!</b> - in 10 s, 
+    <li><b>Enigma I#26 - Uhh-Steady!</b> - in 10 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("83VsHczR-5s")'>view</a></li>
-    <li><b>Enigma I#47 - Mission Impossible</b> - in 2 s, 
+    <li><b>Enigma I#47 - Mission Impossible</b> - in 2 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("ic3gZApDIzA")'>view</a></li>
-    <li><b>Enigma I#49 - Hall of Glass</b> - in 9 s, 
+    <li><b>Enigma I#49 - Hall of Glass</b> - in 9 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("4NnLDEhsBvU")'>view</a> (a <i>spoiler</i>) </li>
-    <li><b>Enigma I#50 - Meditation</b> - in 8 s, 
+    <li><b>Enigma I#50 - Meditation</b> - in 8 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("JvnRMyYiCak")'>view</a></li>
-    <li><b>Enigma I#71 - Spiral Race</b> - in 3 s, 
+    <li><b>Enigma I#71 - Spiral Race</b> - in 3 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("4S48An-mtNE")'>view</a></li>
-    <li><b>Enigma I#77 - Cage The Lions</b> - in 15 s, 
+    <li><b>Enigma I#77 - Cage The Lions</b> - in 15 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("DnlohHMRnsg")'>view</a></li>
-    <li><b>Enigma I#87 - Space Tubes</b> - in 14 s, 
+    <li><b>Enigma I#87 - Space Tubes</b> - in 14 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("C_BT8SH8WQ8")'>view</a></li>
-    <li><b>Enigma I#94 - Growing The Doors</b> -  
+    <li><b>Enigma I#94 - Growing The Doors</b> -
         <a href="javascript:scrollHome()" onclick='loadVideoClip("92Kman4go78")'>view</a> (a <i>spoiler</i>)</li>
-    <li><b>Enigma II#4 - .-R-.-U-.-N-.</b> - in 6 s, 
+    <li><b>Enigma II#4 - .-R-.-U-.-N-.</b> - in 6 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("YNKSfrp7hvw")'>view</a></li>
-    <li><b>Enigma II#10 - Meditation</b> - in 9 s, 
+    <li><b>Enigma II#10 - Meditation</b> - in 9 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("MTPnsc1UWgU")'>view</a></li>
-    <li><b>Enigma III#60 - Fool the Warden</b> - in 15 s, 
+    <li><b>Enigma III#60 - Fool the Warden</b> - in 15 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("UPq7culWqFE")'>view</a></li>
-    <li><b>Enigma III#68 - Bowling</b> - in 5 s, 
+    <li><b>Enigma III#68 - Bowling</b> - in 5 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("nby3QdKbqEY")'>view</a></li>
-    <li><b>Enigma III#70 - Overwhelming</b> - in 5 s, 
+    <li><b>Enigma III#70 - Overwhelming</b> - in 5 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("XWDuaamLQAA")'>view</a></li>
-    <li><b>Enigma III#98 - Guardian Angel</b> - in 9 s, 
+    <li><b>Enigma III#98 - Guardian Angel</b> - in 9 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("RHHOAICODYM")'>view</a></li>
-    <li><b>Enigma IV#12 - Slinky-Racing</b> (easy) - in 7 s, 
+    <li><b>Enigma IV#12 - Slinky-Racing</b> (easy) - in 7 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("e-SUmnKGLsE")'>view</a></li>
-    <li><b>Enigma IV#32 - Under the Radar</b> - in 16 s, 
+    <li><b>Enigma IV#32 - Under the Radar</b> - in 16 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("YOsaGR7zepM")'>view</a></li>
-    <li><b>Enigma IV#76 - Speed Jump</b> - in 8 s, 
+    <li><b>Enigma IV#76 - Speed Jump</b> - in 8 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("TlfMXAaVfBw")'>view</a></li>
-    <li><b>Enigma IV#81 - Be Faster!</b> (easy) - in 6 s, 
+    <li><b>Enigma IV#81 - Be Faster!</b> (easy) - in 6 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("lZFYYtMLMS4")'>view</a></li>
-    <li><b>Enigma V#10 - Shrinking Pits</b> - in 14 s, 
+    <li><b>Enigma V#10 - Shrinking Pits</b> - in 14 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("40z9OddFG9Y")'>view</a></li>
-    <li><b>Enigma V#50 - Anticipation</b> - in 7 s, 
+    <li><b>Enigma V#50 - Anticipation</b> - in 7 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("wVQlLN0bz_k")'>view</a></li>
-    <li><b>Enigma V#55 - Blet</b> - in 3 s, 
+    <li><b>Enigma V#55 - Blet</b> - in 3 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("ZtTn6P-HHK4")'>view</a> (a major <i>spoiler</i>) </li>
-    <li><b>Enigma VI#21 - Checkmate I</b> - in 13 s, 
+    <li><b>Enigma VI#21 - Checkmate I</b> - in 13 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("XCJll7UnWSk")'>view</a></li>
-    <li><b>Enigma VI#34 - Troy</b> - in 18 s, 
+    <li><b>Enigma VI#34 - Troy</b> - in 18 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("j8JGNHMYM3Q")'>view</a></li>
-    <li><b>Enigma VI#50 - Hot Meditation</b> (easy) - in 5 s, 
+    <li><b>Enigma VI#50 - Hot Meditation</b> (easy) - in 5 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("J6qnKGqgdf0")'>view</a></li>
-    <li><b>Enigma VI#50 - Hot Meditation</b> (regular) - in 7 s, 
+    <li><b>Enigma VI#50 - Hot Meditation</b> (regular) - in 7 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("7h85rv-U-gk")'>view</a></li>
-    <li><b>Enigma VII#18 - Speed Meditation</b> - in 4 s, 
+    <li><b>Enigma VII#18 - Speed Meditation</b> - in 4 s,
         <a href="javascript:scrollHome()" onclick='loadVideoClip("stItWxUsP2Q")'>view</a></li>
   </ul>
 
@@ -106,5 +106,3 @@
      uploading walkthroughs of puzzle levels can easily spoil the level author's
      work. Thus please contact the level author before uploading, in case you
      captured such a questionable level run.</p>
-
-
