-> Update trailer items

--- a/homepage/input/movieclips_de.html
+++ b/homepage/input/movieclips_de.html
@@ -33,7 +33,7 @@
 
   <ul> <!-- keep space in first li entry - IE needs it -->
     <li><b>Trailer 1</b> - pr&auml;sentiert Enigma 1.01, <a href="$$trailer_1$$">downloaden</a> (etwa 23 MB)</li>
-    <li><b>Trailer 2</b> - pr&auml;sentiert Enigma 1.20, <a href="$$trailer_2$$">downloaden</a> (etwa 38 MB)</li>
+    <li><b>Trailer 2</b> - pr&auml;sentiert Enigma 1.10 / 1.20, <a href="$$trailer_2$$">downloaden</a> (etwa 38 MB)</li>
   </ul>
 
 
