--- a/homepage/input/viewclips.html
+++ b/homepage/input/viewclips.html
@@ -23,7 +23,7 @@
   <ul> <!-- keep space in first li entry - IE needs it -->
     <li><b>Trailer 1</b> - introducing Enigma 1.01, <a href="$$trailer_1$$">download</a> (appr. 23 MB)
     or <a href='javascript:loadVideoClip("WV9l26Y-mBk")'>view</a></li>
-    <li><b>Trailer 2</b> - introducing Enigma 1.20, <a href="$$trailer_2$$">download</a> (appr. 38 MB)</li>
+    <li><b>Trailer 2</b> - introducing Enigma 1.10 / 1.20, <a href="$$trailer_2$$">download</a> (appr. 38 MB)</li>
   </ul>
 
 
