--- a/homepage/input/viewclips_ru.html
+++ b/homepage/input/viewclips_ru.html
@@ -27,7 +27,7 @@
   <ul> <!-- keep space in first li entry - IE needs it -->
     <li><b>1й трейлер</b> - введение в Enigma 1.01, <a href="$$trailer_1$$">скачать</a> (прибл. 23 Мб)
     или <a href='javascript:loadVideoClip("WV9l26Y-mBk")'>просмотреть</a></li>
-    <li><b>2й трейлер</b> - введение в Enigma 1.20, <a href="$$trailer_2$$">скачать</a> (прибл. 38 Мб)</li>
+    <li><b>2й трейлер</b> - введение в Enigma 1.10 / 1.20, <a href="$$trailer_2$$">скачать</a> (прибл. 38 Мб)</li>
   </ul>
 
 <h3><a class="arrowup" href="javascript:scrollHome()"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
