--- a/homepage/input/movieclips.html
+++ b/homepage/input/movieclips.html
@@ -28,7 +28,7 @@
 
   <ul> <!-- keep space in first li entry - IE needs it -->
     <li><b>Trailer 1</b> - introducing Enigma 1.01, <a href="$$trailer_1$$">download</a> (appr. 23 MB)</li>
-    <li><b>Trailer 2</b> - introducing Enigma 1.20, <a href="$$trailer_2$$">download</a> (appr. 38 MB)</li>
+    <li><b>Trailer 2</b> - introducing Enigma 1.10 / 1.20, <a href="$$trailer_2$$">download</a> (appr. 38 MB)</li>
   </ul>
 
 
