--- a/homepage/input/movieclips_ru.html
+++ b/homepage/input/movieclips_ru.html
@@ -31,7 +31,7 @@
 
   <ul> <!-- keep space in first li entry - IE needs it -->
     <li><b>1й трейлер</b> - введение в Enigma 1.01, <a href="$$trailer_1$$">скачать</a> (прибл. 23 Мб)</li>
-    <li><b>2й трейлер</b> - введение в Enigma 1.20, <a href="$$trailer_2$$">скачать</a> (прибл. 38 Мб)</li>
+    <li><b>2й трейлер</b> - введение в Enigma 1.10 / 1.20, <a href="$$trailer_2$$">скачать</a> (прибл. 38 Мб)</li>
   </ul>
 
 
