-> Homepage update for 1.20 release

--- a/homepage/input/download.html
+++ b/homepage/input/download.html
@@ -19,18 +19,25 @@ by the following critera:
   relevance for installing or playing Enigma.</p>
 
   <ul>
-  <li><ul style="list-style-type:none"><li><b>Windows TODO and later, including Windows TODO</b>
-    <a href="http://downloads.sourceforge.net/project/enigma-game/TODO">
-        Full Installer (1.20)</a> appr. TODO MB</li>
-    <li>md5 - TODO</li>
-    <li>sha256 - TODO</li>
+  <li><ul style="list-style-type:none"><li><b>Windows 32 bit (tested on XP and 7)</b>
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.exe/download">
+        Full Installer (1.20)</a> appr. 40 MB</li>
+    <li>md5 - f1e0034d4bc75d13a4076bd6f34bb24c</li>
+    <li>sha256 - 91f5aadbd2515c312841f1a28055fbff3e961905daf2d6216b5a51eaac2afe99</li>
     </ul></li>
 
-  <li><ul style="list-style-type:none"><li><b>Source Code 32/64-bit compatible, revision TODO </b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/TODO.tar.gz">
-        tar.gz (1.20)</a> appr. TODO MB</li>
-    <li>md5 - TODO</li>
-    <li>sha256 - TODO</li>
+  <li><ul style="list-style-type:none"><li><b>Windows 32 bit (tested on XP and 7)</b>
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.zip/download">
+        .zip file (1.20)</a> appr. 43 MB</li>
+    <li>md5 - b232877c81a9bc4df57501a1f392404f</li>
+    <li>sha256 - aec71667f1ab355a3fec230b188f0af7b05dbff1f51abb22a93f2c6255085e7a</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Source Code 32/64-bit compatible, revision 2334</b>
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.20/enigma-1.20.tar.gz/download">
+        tar.gz (1.20)</a> appr. 36 MB</li>
+    <li>md5 - 5871158e07e675d1472f3cfc2a6557ff</li>
+    <li>sha256 - f2ae2377a37a1fba85ef884f3762b50e191107e1d4520d4e2e0c21901d19758b</li>
     </ul></li>
 
   </ul>
@@ -128,7 +135,6 @@ by the following critera:
 
   <p>Please report problems with any of these packages to the <a
     href="mailto:enigma-devel@nongnu.org">Enigma mailing list</a>.</p>
-
 
   <p>Packages for some other operating systems are made available by
   third parties:</p>
