--- a/homepage/input/powered-by_de.html
+++ b/homepage/input/powered-by_de.html
@@ -11,5 +11,5 @@
 <img src="$$imagedir$$/floating_gnu.png" border="1"  alt="GNU Savannah"></a>
 &nbsp;
 <a href="http://sourceforge.net/">
-<img src="http://sflogo.sourceforge.net/sflogo.php?group_id=622893&type=5" width="210" height="62" border="0" alt="sourceforge Logo"></a>
+<img src="http://sflogo.sourceforge.net/sflogo.php?group_id=622893&amp;type=5" width="210" height="62" border="0" alt="sourceforge Logo"></a>
 </div>
