-> Remove wiki (defunct) from menu -> Relink manual/refman files

--- a/homepage/input/menu.html
+++ b/homepage/input/menu.html
@@ -54,7 +54,7 @@
             <li><a href="$$development$$#level">Level</a>
               <ul>
                 <li><a href="$$refman$$">Reference Doc</a></li>
-                <li><a href="$$wiki$$">Manual Wiki</a></li>
+                <!-- <li><a href="$$wiki$$">Manual Wiki</a></li> -->
               </ul>
             </li>
             <li><a href="$$development$$#app">Application<br>
