--- a/homepage/input/menu_de.html
+++ b/homepage/input/menu_de.html
@@ -52,7 +52,7 @@
             <li><a href="$$development$$#level">Levels</a>
               <ul>
                 <li><a href="$$refman$$">Ref.-Handbuch</a></li>
-                <li><a href="$$wiki$$">Enigma Wiki</a></li>
+                <!-- <li><a href="$$wiki$$">Enigma Wiki</a></li> -->
               </ul>
             </li>
             <li><a href="$$development$$#app">Anwendung<br>
