--- a/homepage/input/menu_ru.html
+++ b/homepage/input/menu_ru.html
@@ -49,8 +49,8 @@
             <li><a href="devel_ru.html#tasks">Текущие задачи</a></li>
             <li><a href="devel_ru.html#level">Уровни</a>
               <ul>
-                <li><a href="manual/enigma-ref.html">Файл справки</a></li>
-                <li><a href="http://enigma.mal2.ch/index.php?title=Main_Page">Wiki руководства</a></li>
+                <li><a href="$$refman$$">Файл справки</a></li>
+                <!-- <li><a href="http://enigma.mal2.ch/index.php?title=Main_Page">Wiki руководства</a></li> -->
               </ul>
             </li>
             <li><a href="devel_ru.html#app">Программа<br>
