Add Russian reference manual to homepage.
TODO:
 - Translation in input/support_ru.html of term "Russian reference manual" and new sections about Enigma 1.20.

--- a/homepage/input/support.html
+++ b/homepage/input/support.html
@@ -54,6 +54,8 @@ for the level of the month.</p>
       <a href="manual_1.20/refman/enigma-ref.html">English Reference manual (html, 2.4 MB)</a></li>
     <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
       <a href="manual_1.20/refman/enigma-ref.pdf">English Reference manual (pdf, 6.9 MB)</a></li>
+    <li> <img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russian" title="Russian">&nbsp;&nbsp;
+      <a href="manual_1.20/refman/enigma-ref_ru.html">Russian Reference manual (html, 3.3 MB)</a></li>
   </ul>
 
   <p>Enigma 1.20 comes with a new level programming interface (API) redesigned from scratch.
