--- a/homepage/input/support_de.html
+++ b/homepage/input/support_de.html
@@ -62,6 +62,8 @@ und Ihre Bewertungen bestimmen den Level des Monats mit.</p>
       <a href="manual_1.20/refman/enigma-ref.html">Englisches Referenzhandbuch (html, 2.4 MB)</a></li>
     <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
       <a href="manual_1.20/refman/enigma-ref.pdf">Englisches Referenzhandbuch (pdf, 6.9 MB)</a></li>
+    <li> <img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russisch" title="Russisch">&nbsp;&nbsp;
+      <a href="manual_1.20/refman/enigma-ref_ru.html">Russisches Referenzhandbuch (html, 3.3 MB)</a></li>
   </ul>
 
   <p>Die Schnittstelle zur Programmierung von Levels (API) wurde in Enigma 1.20 von Grund
