Link the Holarse-articles about Enigma on the homepage.
TODO:
 - Russian translation (only press_ru.html). There seems to be a problem with the encoding of input/press_ru.html?

--- a/homepage/input/press_de.html
+++ b/homepage/input/press_de.html
@@ -24,6 +24,10 @@ In der Presse</h3>
         >Bonnsite (deutsch)</a></li>-->
   <li><a href="http://www.heise.de/software/download/enigma/20301a24917"
         >Heise (deutsch, 0.81)</a></li>
+  <li><a href="http://www.holarse-linuxgaming.de/wiki/enigma"
+        >Holarse (deutsch, 1.20)</a> mit einem
+      <a href="http://www.holarse-linuxgaming.de/news/denkpuzzlespiel_enigma_neuer_version_12_ver%C3%B6ffentlicht"
+        >Artikel über das 1.20-Release</a></li>
   <li><a href="http://www.computerbild.de/download/Enigma-7766.html"
         >Computer Bild (deutsch)<br>
         <img src="images/computer-bild_top-250_downloads-logo.jpg"
