--- a/homepage/input/press.html
+++ b/homepage/input/press.html
@@ -24,6 +24,10 @@ In the press</h3>
         >Bonnsite (German)</a></li>-->
   <li><a href="http://www.heise.de/software/download/enigma/20301a24917"
         >Heise (German, 0.81)</a></li>
+  <li><a href="http://www.holarse-linuxgaming.de/wiki/enigma"
+        >Holarse (German, 1.20)</a> with an
+      <a href="http://www.holarse-linuxgaming.de/news/denkpuzzlespiel_enigma_neuer_version_12_ver%C3%B6ffentlicht"
+        >article about the 1.20-release</a></li>
   <li><a href="http://www.computerbild.de/download/Enigma-7766.html"
         >Computer Bild (German)<br>
         <img src="images/computer-bild_top-250_downloads-logo.jpg"
